﻿Revision history for {{$dist->name}}

{{$NEXT}}

0.04000001 2013-11-22T04:23:48Z
 [00 Maint]
 - Changes retroactively cleaned. Next time, you will be forced to wear a
   clown shoes and ride a unicycle.

 [Dependencies::Stats]
 - Dependencies changed, see Changes.deps{,.all,.dev} for details
 - build: ↑1
 - configure: ↑1
 - develop: +44 ↑1 -3
 - test: ↑1 -3

 [Documentation]
 - Readme.mkdn → MetaCPAN

 [Packaging]
 - Build.PL updated by Dzil to have new Fallback Mechanics.

 [Tests]
 - Use Test::Compile::PerFile
 - Newer ReportVersions::Tiny to avoid develop-deps showing.

0.04000000 2013-09-26T00:25:33Z
 [00 Major]
 - Not really a major, just fixing my failure to increment majorly instead
   of patch-ly.
 - Also, The changelog has been updated. Retroactively. Pray I do not alter
   it further. https://www.youtube.com/watch?v=WpE_xMRiCLE

0.03000101 2013-09-26T00:14:19Z
 [00 Major]
 - Guts reworked to use Module::Metadata.
 - ::All reworked to be less !@#$ insane.
 - Dep failures no longer say "NA()" and instead get their own hash entry.

 [Dependencies]
 - use Module::Data
 - upgrade Module::Build

 [Dependencies::Stats]
 - Dependencies changed, see Changes.deps{,.all,.dev} for details
 - build: ↑1
 - configure: ↑1
 - develop: +7 ↑1
 - runtime: +1
 - test: +3 -2

 [Documentation]
 - Add README.mkdn

 [Meta]
 - Bug tracker to github issues.

 [Tests]
 - Regenerated to shit

0.03000100 2012-07-28T18:27:33Z
 [00_Note]
 - Accidentally lost the source code entirely for 0.03xxxyyy, so had to
   sort of reconstruct that history. Also accidentally released it as
   0.02000101 due to not having said code and not realising it.

 [Bugfixes]
 - Defer module version checks to later to help bootstrap.

 [Dependencies]
 - use newer Module::Build and Test::More
 - use Readonly

 [Dependencies::Stats]
 - Dependencies changed, see Changes.deps{,.all,.dev} for details
 - build: ↑1
 - configure: ↑1
 - develop: ↑2
 - runtime: +1
 - test: ↑1

0.03000000 2012-03-12T15:06:44Z