@@ -1,4 +1,8 @@
-0.04000001
+0.04000002
+ [Added / runtime requires]
+ - Carp
+
+0.04000001 2013-11-22T04:23:48Z
  [Changed / build requires]
  - Module::Build 0.4007 → 0.4202
 
@@ -94,4 +98,8 @@
 0.01005020 2010-07-30T09:06:26Z
  [Added / runtime requires]
  - Carp
+
+0.01000216 2010-06-13T05:07:31Z
+ [Added / runtime requires]
+ - namespace::autoclean
 
