@@ -1,4 +1,11 @@
-0.04000001
+0.04000002
+ [Added / runtime requires]
+ - Carp
+
+ [Changed / develop requires]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.004000 → 2.004001
+
+0.04000001 2013-11-22T04:23:48Z
  [Added / develop requires]
  - Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl
  - Dist::Zilla::Plugin::Authority 1.006
@@ -202,4 +209,8 @@
 0.01005020 2010-07-30T09:06:26Z
  [Added / runtime requires]
  - Carp
+
+0.01000216 2010-06-13T05:07:31Z
+ [Added / runtime requires]
+ - namespace::autoclean
 
