@@ -4,7 +4,7 @@ Dist::Zilla::Plugin::MetaData::BuiltWith - Report what versions of things your d
 
 # VERSION
 
-version 0.04000001
+version 0.04000002
 
 # SYNOPSIS
 
