@@ -7,6 +7,7 @@ copyright_holder = Kent Fredric <kentnl@cpan.org>
 ; Uncomment this to bootstrap via self
 [Bootstrap::lib]
 try_built = 1
+fallback  = 0
 
 [@Filter]
 -bundle = @Author::KENTNL
