@@ -1,6 +1,13 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [00 Bugfix]
+ - Don't try to test if it was a file or not if its undefined.
+
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - develop: ↑1
+ - runtime: +1
 
 0.04000001 2013-11-22T04:23:48Z
  [00 Maint]
@@ -209,6 +216,10 @@
 
  [Dependencies::Added / runtime requires]
  - namespace::autoclean
+
+ [Dependencies::Stats]
+ - Dependencies changed, see Changes.deps{,.all,.dev} for details
+ - runtime: +1
 
 0.01000022 2010-06-11T11:48:14Z
  - First version.
